# image-saver-plugin

./: .env.example  .gitignore  .prettierignore  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wxt.config.ts
converter/: Cargo.toml
converter/src/: main.rs
entrypoints/: background.ts  content.ts
entrypoints/background/: default_image_source_blob_adapter.ts  image_source_blob_port.ts
entrypoints/content/: constants.ts  content.css  dedup.ts  extract_gallery_stem.ts  find_batch_queue.ts  image_observer.ts  job_outcome_hub.ts  main.ts  outcome_cache.ts  overlay.ts  query_images.ts  resolve_image_url.ts  session_saved_keys.ts
entrypoints/popup/: index.html  main.ts  style.css
entrypoints/shared/: contracts.ts  daemon_client.ts  directory_access_ping.ts  directory_handle_idb.ts  download_image.ts  (+13 more)
image-saver-daemon/: .env.example  Cargo.toml
image-saver-daemon/migrations/: 20260407212300_create_files_table.sql  20260407235500_add_created_updated_at_to_files.sql
image-saver-daemon/src/: main.rs
image-saver-daemon/src/application/: dto.rs  mod.rs
image-saver-daemon/src/application/commands/: mod.rs  save_image.rs  set_save_directory.rs
image-saver-daemon/src/application/queries/: find_image_by_name.rs  find_images_by_names.rs  health.rs  image_exists.rs  mod.rs
image-saver-daemon/src/infrastructure/: mod.rs  sqlite_files.rs
image-saver-daemon/src/interface/http/: error_mapper.rs  handlers.rs  mod.rs  openapi.rs  routes.rs  types.rs
public/: dev-fixture.html
scripts/: import_files_to_sqlite.py
